--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ p {
   font-family: 'Raleway_Light';
 }
 
-.color-fresh {
+.color-fresh, .btn:hover {
   color: #4ABDAC;
 }
 
@@ -90,6 +90,10 @@ p {
   color: #fff;
 }
 
+.color-negro {
+  color: black;
+}
+
 .bg-fresh {
   background-color: #4ABDAC;
 }
@@ -110,7 +114,7 @@ p {
   background-color: #A5A5AF;
 }
 
-.border-fresh {
+.border-fresh, .btn:hover {
   border-color: #4ABDAC !important;
 }
 
@@ -146,8 +150,8 @@ ul li {
 }
 
 .btn:hover {
-  opacity: 0.7;
-  color: white;
+  background-color: white;
+  border: 2px solid;
 }
 
 .logo img {
@@ -261,20 +265,10 @@ header .nav input:checked ~ span:nth-child(3) {
 }
 
 .banner {
-  position: relative;
-}
-
-.banner .video {
-  width: 100%;
-}
-
-.banner .info-banner {
-  position: absolute;
-  z-index: 100;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 60vw;
 }
 
 /* Panels. */
@@ -446,7 +440,7 @@ header .nav input:checked ~ span:nth-child(3) {
 
 .app__text {
   position: absolute;
-  right: 3%;
+  right: 2%;
   top: 20%;
   z-index: 1;
   width: 55%;
@@ -826,21 +820,126 @@ header .nav input:checked ~ span:nth-child(3) {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 100vh;
 }
 
-@media (min-width: 576px) {
+.banner-parallax .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.banner-parallax .swiper .swiper-button-next,
+.banner-parallax .swiper .swiper-button-prev {
+  color: #4ABDAC;
+}
+
+.banner-parallax .swiper .swiper-slide img {
+  width: 40vw;
+}
+
+footer .logo {
+  width: 10vw;
+}
+
+footer .redes a {
+  width: 5vw;
+  height: 5vw;
+  margin: 0.5vw;
+  text-align: center;
+  border-radius: 50%;
+  padding: 0.5vw;
+  border: 1px solid black;
+  background-color: white;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+footer .redes a i {
+  font-size: 1vw;
+  color: black;
+}
+
+footer .redes a:hover {
+  border: none;
+  background-color: black;
+}
+
+footer .redes a:hover i {
+  color: white;
+}
+
+footer {
+  background-size: cover;
+}
+
+.only-desk {
+  display: block;
+}
+
+.only-mobile {
+  display: none;
+}
+
+@media (max-width: 576px) {
   h1 {
-    font-size: 3rem;
-  }
-  h2 {
-    font-size: 2.25rem;
-  }
-  h3 {
     font-size: 1.5rem;
   }
-  p {
+  h2 {
     font-size: 1rem;
+  }
+  h3 {
+    font-size: 0.8rem;
+  }
+  p {
+    font-size: 0.6rem;
+  }
+  .only-desk {
+    display: none;
+  }
+  .only-mobile {
+    display: block;
+  }
+  .logo img {
+    width: 26vw;
+  }
+  .banner-parallax {
+    min-height: 40vh;
+  }
+  .banner-parallax .swiper .swiper-slide img {
+    width: 100%;
+  }
+  header .nav input:checked ~ .menu {
+    width: 80vw;
+  }
+  header .nav .menu li a {
+    font-size: 2.5vw;
+  }
+  header .nav span {
+    width: 3.2vw;
+    left: 2.1vw;
+  }
+  header .nav input {
+    width: 6vw;
+    height: 6vw;
+    border-radius: 50%;
+  }
+  .app {
+    width: 100%;
+  }
+  footer .logo {
+    width: 40vw;
+  }
+  footer .redes a {
+    width: 8vw;
+    height: 8vw;
+    padding: 1.5vw;
+    margin: 0.5vw;
+  }
+  footer .redes a i {
+    font-size: 5vw;
+    color: black;
+  }
+  footer ul li p {
+    font-size: 0.8rem;
   }
 }
 
@@ -873,6 +972,31 @@ header .nav input:checked ~ span:nth-child(3) {
   .panel-cont .panel img {
     width: 25%;
   }
+  .cont {
+    height: 75vh;
+  }
+  .app__text {
+    right: 9%;
+  }
+  .app__text--2 {
+    top: 200px;
+    left: 10%;
+  }
+  .banner-parallax {
+    height: 40vh;
+  }
+  footer .logo {
+    width: 20vw;
+  }
+  footer .redes a {
+    width: 8vw;
+    height: 8vw;
+    margin: 0.5vw;
+  }
+  footer .redes a i {
+    font-size: 1rem;
+    color: black;
+  }
 }
 
 @media (min-width: 992px) {
@@ -891,6 +1015,9 @@ header .nav input:checked ~ span:nth-child(3) {
   header .nav input:checked ~ .menu {
     width: 40vw;
   }
+  .banner-parallax {
+    height: 80vh;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -906,6 +1033,9 @@ header .nav input:checked ~ span:nth-child(3) {
   }
   p {
     font-size: 0.9vw;
+  }
+  .banner-parallax {
+    height: 80vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
