--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,9 @@ p{
 .color-blanco{
   color: $blanco;
 }
+.color-negro{
+  color: black;
+}
 
 //Background
 
@@ -112,8 +115,10 @@ ul{
   font-size: 1rem;  
   font-weight: 700;
   &:hover{
-      opacity: 0.7;
-      color: white;
+      @extend .border-fresh;
+      @extend .color-fresh;
+      background-color: white;
+      border: 2px solid;
   }
 }
 //header
@@ -209,17 +214,11 @@ header {
 
 //Banner
 .banner{
-  position: relative;
-  .video{
-    width: 100%;
-  }
-  .info-banner{
-    position: absolute;
-    z-index: 100;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 60vw;
+
 }
 
 //Perks
@@ -365,7 +364,7 @@ header {
 	
 	&__text {
 		position: absolute;
-		right: 3%;
+		right: 2%;
 		top: 20%;
 		z-index: 1;
     width: 55%;
@@ -557,7 +556,60 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 100vh; 
+  .swiper {
+    width: 100%;
+    height: 100%;
+    .swiper-button-next,
+    .swiper-button-prev{
+      color: $fresh;
+    }
+    .swiper-slide{
+      img{
+        width: 40vw;
+      }
+    }
+  }
+}
+
+footer{
+  .logo{
+    width: 10vw;
+  }
+  .redes{
+    a{
+      width: 5vw;
+      height: 5vw;
+      margin: 0.5vw;;
+      text-align: center;
+      border-radius: 50%;
+      padding: 0.5vw;
+      border: 1px solid black;
+      background-color: white;
+      @include toAnim(0.4s);
+      i{
+        font-size: 1vw;
+        color: black;
+      }
+      &:hover{
+        border: none;
+        background-color: black;
+        i{
+          color: white;
+        }
+      }
+    }
+  }
+}
+
+footer{
+  background-size: cover;
+}
+
+.only-desk{
+  display: block
+}
+.only-mobile{
+  display: none;
 }
 
 @import './breakpoint';
